--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".dashboard.ui.MainActivity">
+    tools:context=".main.ui.MainActivity">
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/heroImagesViewPager"
