--- a/app/src/main/res/layout/layout_placeholder_view.xml
+++ b/app/src/main/res/layout/layout_placeholder_view.xml
@@ -12,12 +12,9 @@
 
     <ImageView
         android:id="@+id/errorImageView"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_width="@dimen/spacing_120"
+        android:layout_height="@dimen/spacing_120"
+        android:layout_margin="@dimen/spacing_8"
         android:contentDescription="@null"
         android:importantForAccessibility="no"
         android:scaleType="fitEnd"
@@ -32,9 +29,9 @@
         android:id="@+id/titleTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginStart="@dimen/spacing_8"
+        android:layout_marginTop="@dimen/spacing_16"
+        android:layout_marginEnd="@dimen/spacing_8"
         android:focusable="true"
         android:textAlignment="center"
         android:textSize="@dimen/text_size_24"
@@ -47,9 +44,9 @@
         android:id="@+id/descriptionTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginStart="@dimen/spacing_8"
+        android:layout_marginTop="@dimen/spacing_16"
+        android:layout_marginEnd="@dimen/spacing_8"
         android:focusable="true"
         android:text="@string/inv_generic_error_subtitle"
         android:textAlignment="center"
@@ -63,9 +60,9 @@
         android:id="@+id/actionButtonContainer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginStart="@dimen/spacing_8"
+        android:layout_marginTop="@dimen/spacing_32"
+        android:layout_marginEnd="@dimen/spacing_8"
         android:background="@drawable/sign_in_btn"
         android:gravity="center"
         android:importantForAccessibility="yes"
@@ -88,10 +85,7 @@
         android:id="@+id/progressBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_margin="@dimen/spacing_8"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
