--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,24 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="spacing_16activity_vertical_margin">16dp</dimen>
     <dimen name="fab_size">56dp</dimen>
     <dimen name="spacing_1">1dp</dimen>
     <dimen name="spacing_2">2dp</dimen>
+    <dimen name="spacing_4">4dp</dimen>
     <dimen name="spacing_5">5dp</dimen>
-    <dimen name="spacing_10">10dp</dimen>
     <dimen name="spacing_8">8dp</dimen>
+    <dimen name="spacing_10">10dp</dimen>
     <dimen name="spacing_12">12dp</dimen>
+    <dimen name="spacing_14">14dp</dimen>
+    <dimen name="spacing_16">16dp</dimen>
+    <dimen name="spacing_20">20dp</dimen>
+    <dimen name="spacing_24">24dp</dimen>
     <dimen name="spacing_32">32dp</dimen>
+    <dimen name="spacing_35">35dp</dimen>
+    <dimen name="spacing_36">36dp</dimen>
     <dimen name="spacing_40">40dp</dimen>
+    <dimen name="spacing_48">48dp</dimen>
     <dimen name="spacing_50">50dp</dimen>
+    <dimen name="spacing_60">60dp</dimen>
     <dimen name="spacing_100">100dp</dimen>
+    <dimen name="spacing_120">120dp</dimen>
+    <dimen name="spacing_150">150dp</dimen>
     <dimen name="spacing_160">160dp</dimen>
     <dimen name="spacing_200">200dp</dimen>
+    <dimen name="spacing_300">300dp</dimen>
 
     <dimen name="preferred_tap_target_size">48dp</dimen>
     <dimen name="listing_image_height">200dp</dimen>
     <dimen name="listing_detail_height">100dp</dimen>
 
+    <dimen name="text_size_12">12sp</dimen>
     <dimen name="text_size_14">14sp</dimen>
     <dimen name="text_size_16">16sp</dimen>
     <dimen name="text_size_18">18sp</dimen>
